// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardTab active state should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardTab
    isActive={true}
    label="purchased"
    onPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": Array [
        <Component
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Coupon
            fill="rgb(226,1,119)"
            hasCheckmark={true}
          />
        </Component>,
        <YuText
          style={
            Object {
              "color": "rgb(226,1,119)",
            }
          }
        >
          purchased
        </YuText>,
      ],
      "onPress": [MockFunction],
      "style": Object {
        "alignItems": "center",
        "borderBottomColor": "rgb(226,1,119)",
        "borderBottomWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 32,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Coupon
            fill="rgb(226,1,119)"
            hasCheckmark={true}
          />,
          "style": Object {
            "marginRight": 24,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "rgb(226,1,119)",
            "hasCheckmark": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "purchased",
          "style": Object {
            "color": "rgb(226,1,119)",
          },
        },
        "ref": null,
        "rendered": "purchased",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <Component
            style={
              Object {
                "marginRight": 24,
              }
            }
          >
            <Coupon
              fill="rgb(226,1,119)"
              hasCheckmark={true}
            />
          </Component>,
          <YuText
            style={
              Object {
                "color": "rgb(226,1,119)",
              }
            }
          >
            purchased
          </YuText>,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(226,1,119)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 32,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Coupon
              fill="rgb(226,1,119)"
              hasCheckmark={true}
            />,
            "style": Object {
              "marginRight": 24,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "fill": "rgb(226,1,119)",
              "hasCheckmark": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "purchased",
            "style": Object {
              "color": "rgb(226,1,119)",
            },
          },
          "ref": null,
          "rendered": "purchased",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardTab flipped state should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardTab
    isActive={false}
    isFlipped={true}
    label="purchased"
    onPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": Array [
        <Component
          style={
            Object {
              "marginLeft": 24,
            }
          }
        >
          <Coupon
            fill="rgb(51,51,51)"
            hasCheckmark={true}
          />
        </Component>,
        <YuText
          style={
            Object {
              "color": "rgb(51,51,51)",
            }
          }
        >
          purchased
        </YuText>,
      ],
      "onPress": [MockFunction],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row-reverse",
        "justifyContent": "flex-start",
        "paddingBottom": 32,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Coupon
            fill="rgb(51,51,51)"
            hasCheckmark={true}
          />,
          "style": Object {
            "marginLeft": 24,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "rgb(51,51,51)",
            "hasCheckmark": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "purchased",
          "style": Object {
            "color": "rgb(51,51,51)",
          },
        },
        "ref": null,
        "rendered": "purchased",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <Component
            style={
              Object {
                "marginLeft": 24,
              }
            }
          >
            <Coupon
              fill="rgb(51,51,51)"
              hasCheckmark={true}
            />
          </Component>,
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            purchased
          </YuText>,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row-reverse",
          "justifyContent": "flex-start",
          "paddingBottom": 32,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Coupon
              fill="rgb(51,51,51)"
              hasCheckmark={true}
            />,
            "style": Object {
              "marginLeft": 24,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "fill": "rgb(51,51,51)",
              "hasCheckmark": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "purchased",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": "purchased",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardTab inactive state should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardTab
    isActive={false}
    label="purchased"
    onPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": Array [
        <Component
          style={
            Object {
              "marginRight": 24,
            }
          }
        >
          <Coupon
            fill="rgb(51,51,51)"
            hasCheckmark={true}
          />
        </Component>,
        <YuText
          style={
            Object {
              "color": "rgb(51,51,51)",
            }
          }
        >
          purchased
        </YuText>,
      ],
      "onPress": [MockFunction],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 32,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Coupon
            fill="rgb(51,51,51)"
            hasCheckmark={true}
          />,
          "style": Object {
            "marginRight": 24,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "fill": "rgb(51,51,51)",
            "hasCheckmark": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "purchased",
          "style": Object {
            "color": "rgb(51,51,51)",
          },
        },
        "ref": null,
        "rendered": "purchased",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <Component
            style={
              Object {
                "marginRight": 24,
              }
            }
          >
            <Coupon
              fill="rgb(51,51,51)"
              hasCheckmark={true}
            />
          </Component>,
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            purchased
          </YuText>,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 32,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Coupon
              fill="rgb(51,51,51)"
              hasCheckmark={true}
            />,
            "style": Object {
              "marginRight": 24,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "fill": "rgb(51,51,51)",
              "hasCheckmark": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "purchased",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": "purchased",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
